<?xml version="1.0"?>
<package>
  <name>ant_controller_configuration</name>
  <version>0.9.4</version>
  <description>Launch files and scripts needed to configure
    the controllers of the ANT robot.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>

</package>
