<?xml version="1.0"?>
<package>
  <name>ant_hardware_tests</name>
  <version>0.9.6</version>
  <description>ANT ROS control plugin test package</description>

  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ant_hardware</build_depend>
  <build_depend>rtt</build_depend>

  <run_depend>ant_hardware</run_depend>
  <run_depend>ant_description</run_depend>
  <run_depend>ant_controller_configuration</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_rosnode</run_depend>

</package>
