<?xml version="1.0"?>
<package>
  <name>controller_configuration_pmb2_7</name>
  <version>1.0.7</version>
  <description>Launch files and scripts needed to configure the controllers of the PMB2-6 robot.</description>
  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <license>Modified BSD</license>
  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <replace>pmb2_controller_configuration</replace>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pmb2_controller_configuration</run_depend>

</package>
