<?xml version="1.0"?>
<package format="2">
  <name>pmb2_bringup</name>
  <version>3.0.24</version>
  <description>Launch files and scripts needed to bring up the ROS nodes of a PMB2 robot.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>Apache License 2.0</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb2_controller_configuration</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_pose</exec_depend>
  <exec_depend>tf_lookup</exec_depend>
  <exec_depend>speed_limit_node</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>

</package>
