<?xml version="1.0"?>
<package>
  <name>pmb2_description</name>
  <version>0.1.0</version>
  <description>
      Mechanical, kinematic, visual, etc. description of the PMB2 robot.
      The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.
  </description>

  <maintainer email="maintainer@pal-robotics.com">PAL Robotics</maintainer>

  <license>Creative Commons BY-NC-ND 3.0</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

</package>
