<?xml version="1.0"?>
<package>
  <name>reem_description</name>
  <version>0.9.0</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the REEM robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>

</package>
