<?xml version="1.0"?>
<package>
  <name>reem_hardware</name>
  <version>0.9.0</version>
  <description>ROS control plugin for REEM</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>pal_ros_control</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>pal_ros_control</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
