<?xml version="1.0"?>
<package>
  <name>reem_hardware_tests</name>
  <version>0.9.0</version>
  <description>REEM ROS control plugin test package</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>reem_hardware</build_depend>
  <build_depend>rtt</build_depend>

  <run_depend>reem_hardware</run_depend>
  <run_depend>reem_description</run_depend>
  <run_depend>reem_controller_configuration</run_depend>
r <run_depend>robot_state_publisher</run_depend>
r <run_depend>ocl</run_depend>
r <run_depend>rtt_rosnode</run_depend>

</package>
